Repair two scrollbars

--- a/src/view/Message/Message.css
+++ b/src/view/Message/Message.css
@@ -12,6 +12,7 @@
     min-height: 100vh;
     font-size: 1.5rem;
     border:none;
+    overflow: hidden;
     
 
 } 
